# actix-firebase-auth

./: Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: dependabot.yaml
.github/workflows/: build_and_release.yaml  bump_version.yaml  cargo_attribution.yaml  ci.yaml  setup_gpg.yaml  update_msrv.yaml
attribution/: dependencies.toml  self.toml
examples/: server.rs
src/: client.rs  error.rs  impls.rs  lib.rs  user.rs
src/firebase/: mod.rs
src/firebase/idp/: error.rs  google.rs  mod.rs
src/jwk/: config.rs  error.rs  key.rs  mod.rs  verifier.rs
