[package]
name = "actix-firebase-auth"
version = "0.1.0"
edition = "2024"
description = "Firebase ID token verification for Actix Web using Google's JWKs"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
repository = "https://github.com/ekkolon/actix-firebase-auth"
license = "MIT OR Apache-2.0"
categories = ["web-programming", "authentication"]
keywords = ["actix", "firebase", "auth", "jwt", "jwk"]

[features]
default = ["openssl"]
openssl = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.2"
base64 = "0.22.1"
futures = "0.3"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.19", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1.41"

[dev-dependencies]
actix-rt = "2.10.0"
httpmock = "0.7.0"
rsa = { version = "0.9", features = [] }
rand = "0.8.5"
sha2 = "0.10"

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
