[package]
name = "actix-firebase-auth"
version = "0.5.1"
edition = "2021"
description = "Firebase ID token verification for Actix Web using Google's JWKs"
authors = ["Nelson Dominguez <ekkolon@proton.me>"]
repository = "https://github.com/ekkolon/actix-firebase-auth"
license = "MIT OR Apache-2.0"
categories = ["web-programming", "authentication"]
keywords = ["actix", "firebase", "auth", "jwt", "jwk"]
rust-version = "1.82"
include = [
    "src/**/*",
    "Cargo.toml",
    "/examples",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[features]
default = ["openssl"]
openssl = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[[example]]
name = "server"
path = "examples/server.rs"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.2"
base64 = "0.22.1"
email_address = "0.2.9"
futures = "0.3"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.19", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1.41"
url = { version = "2.5.4", default-features = false, features = ["serde"] }

[dev-dependencies]
actix-rt = "2.10.0"
httpmock = "0.7.0"
openssl = { version = "0.10.73", features = [] }
rand = "0.8.5"
sha2 = "0.10"


# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html#allowed-by-default-lints
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
missing-abi = "warn"
missing_docs = "warn"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/
# pedantic
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# restriction
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
allow_attributes = "warn"
